kubernetes/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-web-server
  namespace: gent
  labels:
    app: web-server
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 3
      maxSurge: 3
  revisionHistoryLimit: 2
  replicas: 5
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: my-next-web-server:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
