kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-postgres
  namespace: gent
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
    - name: postgres
      image: postgres
      ports:
        - containerPort: 5432
