kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: gent

spec:
  ingressClassName:
  rules:
    - host: training-ick.com
      http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: my-service
                port:
                  number: 80
